--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -134,7 +134,7 @@ Generator.shortcut.name=Name:
 Generator.shortcut.title=Create Desktop Shortcut
 Generator.shortcut.tooltip=Create desktop shortcut
 Generator.shortcut=Shortcut ...
-Generator.warning.command.line.may.be.too.long=Warning: Command line may be too long
+Generator.warning.command.line.too.long=Warning: Command line is too long, use a Job
 Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in file: {1}
 HintsUI.action.delete=Delete
 HintsUI.action.move=Move
@@ -177,7 +177,7 @@ HintsUI.status.unknown=Missing or error
 HintsUI.this.title=Hints
 Job.completed.job=Job {0} done
 Job.config.cancelled=Job {0} cancelled
-Job.continuing.job=Continuing Job:\ 
+Job.job.complete=Job complete:\ 
 Job.executing.job=Executing Job:\ 
 Job.failed.job=Job {0} failed
 JobsUI.add.N.origins=Add {0} {1} origins?
