#109 Added Preference for macOS to use either the launcher or script internally and for shortcuts

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1005,6 +1005,7 @@ Settings.generalPanel.tab.title=General
 Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialog
 Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
+Settings.macosLauncherLabel.text=Use ELS MacOS Launcher\:
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
