--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -342,6 +342,8 @@ Main.hint.tracker.server.not.used.for.this.operation=Hint Tracker/Server not use
 Main.publisher.library.or.collection.file.is.required.for.remote.publish=A -p publisher library or -P collection file is required for Remote Publish
 Main.remote.subscriber.failed.to.connect=Remote subscriber: {0}, failed to connect
 Main.subscriber.library.or.collection.file.is.required.for.remote.publish=A -s subscriber library or -S collection file is required for Remote Publish
+Main.check.for.update=Check for Update
+Main.install.update=Install Update
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
 MainFrame.job.running.are.you.sure=There is a Job running. Are you sure you want to quit?
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
@@ -478,8 +480,10 @@ Navigator.generalTab.title=General
 Navigator.getting.started=Getting Started
 Navigator.hints.available=Hints available
 Navigator.initialized=Initialized Navigator
-Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table></body></html>
-Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
+Navigator.install.new.version=<html><body><p>ELS update available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table></body></html>
+Navigator.install.update.version=<html><body><p>ELS update available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
+Navigator.install.update.version.text=ELS update available\r\n  Installed: {0}\r\n  Update:    {1}\r\n
+Navigator.install.update.version.download.text=ELS update available, getting Updater ...\r\n  Installed: {0}\r\n  Update:    {1}
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelCustom.text=Custom\:
@@ -1090,6 +1094,7 @@ Updater.unmounting=unmounting:\
 Updater.unpacking=unpacking: 
 Updater.update.info.not.found.using.coded.url=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
+Updater.copying=copying: 
 Z.are.you.sure.you.want.to.close=Are you sure you want to close\ 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit Hint Tracker/Server and close\ 
@@ -1176,3 +1181,9 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.install.available.at=Available at: 
+Navigator.install.use.option.y.to.install.update=Use option -Y to install update
+Navigator.install.downloading=Downloading: 
+Navigator.install.unpacking=Unpacking:   
+Navigator.download.unpack.failed=Download or unpack of update failed
+Navigator.update.not.found=ELS update {0} not found
