#149 Interim commit moving from Windows to Mac to test command line

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1187,3 +1187,5 @@ Navigator.install.downloading=Downloading:
 Navigator.install.unpacking=Unpacking:   
 Navigator.download.unpack.failed=Download or unpack of update failed
 Navigator.update.not.found=ELS update {0} not found
+Main.see.els.updater.log.at=See ELS Updater log at: 
+Main.exiting.so.files=Exiting so files to be updated are not locked.\nUpdater running in background.
