--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -4,8 +4,6 @@
 # Trailing spaces are IMPORTANT, some lines have multiple spaces.
 # "Z." items are shared. Named Z to sort to the bottom.
 #
-# // TODO Clean-up and optimize. Too many duplications and minor differences
-#
 
 About.title=About
 Browser.add.bookmark=Add Bookmark
@@ -13,6 +11,7 @@ Browser.bookmark.location.not.found=Location not found\:
 Browser.bookmark.name=bookmark name: 
 Browser.computer=Computer
 Browser.connection.lost=Connection lost
+Browser.could.not.find=! Could not find 
 Browser.could.not.retrieve.list.of.remote.drives=Could not retrieve list of remote drives
 Browser.error.launching.item=Error launching item
 Browser.error.saving.bookmarks=Error saving Bookmarks: 
@@ -270,6 +269,10 @@ Job.executing.job=Executing Job:\
 Job.failed.job=Job {0} failed
 Job.job.complete=Job complete:\ 
 Job.setallorigins.logic.fault=setAllOrigins logic fault
+Job.task.number=, Task #
+Jobs.references.for.found.in.jobs=References for "{0}" found in Jobs:       
+Jobs.waiting.for.job.thread.to.complete=Waiting for Job thread to complete
+Jobs.waiting.is.over.for.the.job.thread=Waiting is over for the Job thread
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
@@ -498,6 +501,7 @@ MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user reque
 MainFrame.job.running.are.you.sure=There is a Job running. Are you sure you want to quit?
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
+NavHelp.showCheckBox.text=Show at start-up
 NavHelp.error.opening.help.file=Error opening help file:\ 
 NavHelp.name=NavHelp
 NavTransferHandler.action.cancelled=Action cancelled
@@ -506,6 +510,7 @@ NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfe
 NavTransferHandler.cannot.transfer=Cannot transfer 
 NavTransferHandler.continue=Continue?
 NavTransferHandler.copied=Copied
+NavTransferHandler.copy.or.move=Copy or Move
 NavTransferHandler.copy=Copy
 NavTransferHandler.delete.directory.error=Error deleting directory: 
 NavTransferHandler.delete.directory.message=delete directory {0, choice, 0#dry-run |1#}{1}
@@ -529,6 +534,7 @@ NavTransferHandler.transfer.file.from=\ from
 NavTransferHandler.transfer.file.to=\ to 
 NavTransferHandler.unsupported.flavor=Unsupported DataFlavor  
 NavTransferWorker.added.batch.0.items=Added batch: {0} items, 
+NavTransferWorker.average=, average 
 NavTransferWorker.cancelled=NavTransferWorker cancelled
 NavTreeNode.bookmark=Bookmark
 NavTreeNode.collection=Collection
@@ -615,6 +621,7 @@ Navigator.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto 
 Navigator.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
 Navigator.connect.to.using=Connect to "{0}" using:      
 Navigator.controls.help.title=Navigator Controls
+Navigator.could.not.be.loaded=" could not be loaded
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.download.and.unpack.of.els.updater.successful=Download and unpack of ELS Updater successful
@@ -628,6 +635,7 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.generalTab.mnemonic=G
 Navigator.generalTab.title=General
 Navigator.getting.started=Getting Started
+Navigator.hint.s.conflict.with.the.current=\ Hint(s) conflict with the current 
 Navigator.hints.available=Hints available
 Navigator.initialized=Initialized Navigator
 Navigator.install.available.at=Available at: 
@@ -639,6 +647,7 @@ Navigator.install.update.version.text=ELS update available\r\n  Installed: {0}\r
 Navigator.install.update.version=<html><body><p>ELS update available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
 Navigator.install.use.option.y.to.install.update=Use option -Y to install update
 Navigator.installed.up.to.date=ELS is up-to-date
+Navigator.job=Job "
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelCustom.text=Custom\:
 Navigator.labelFlavor.text=Flavor\:
@@ -935,6 +944,7 @@ Navigator.update.not.found=ELS update {0} not found
 Navigator.update.status=Update Status
 Navigator.update=Check for Updates
 Navigator.updated=update successful
+Navigator.value.not.found=Value not found
 Navigator.version.info.missing.or.malformed=Missing or malformed version.info, cannot continue: {0}
 Navigator.workstation=Workstation
 Operations.displayName=Operations
@@ -1065,6 +1075,7 @@ OperationsUI.select.excluded.libraries=Select excluded libraries:
 OperationsUI.select.included.excluded.libraries=Select included/excluded libraries:
 OperationsUI.subscriber.libraries=Subscriber libraries
 OperationsUI.uncheck.to.exclude.selections=Uncheck to exclude selections
+Preferences.preferences.file=preferences file
 Process.a.p.publisher.library.or.p.collection.file.is.required.for.local.publish=A -p publisher library or -P collection file is required for Local Publish
 Process.analyzing.library.for.duplicates=Analyzing library ''{0}'' for duplicates
 Process.copies=# Copies           : 
@@ -1239,6 +1250,7 @@ Settings.generalPanel.tab.title=General
 Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialog
 Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
+Settings.showGettingStarted.text=Show Getting Started\:
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.macosLauncherLabel.text=Use ELS MacOS Launcher\:
@@ -1278,6 +1290,7 @@ Sftp.server.is.listening.on=Sftp server is listening on:
 Sftp.session.time.out.ending.session=ELS sftp session time-out, ending session, 
 Sftp.setting.sftp.idle.timeout.to=Setting sftp idle timeout to 
 Sftp.stopping.sftp.server.on=stopping sftp server on: 
+Sleep.add.new.tool.configuration=Add new tool configuration
 Sleep.displayName=Sleep
 Sleep.help=Sleep Help
 Sleep.labelTime.text=Sleep time in minutes\:  
@@ -1514,16 +1527,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Navigator.hint.s.conflict.with.the.current=\ Hint(s) conflict with the current 
-Navigator.value.not.found=Value not found
-Navigator.could.not.be.loaded=" could not be loaded
-Navigator.job=Job "
-Preferences.preferences.file=preferences file
-Browser.could.not.find=! Could not find 
-NavTransferHandler.copy.or.move=Copy or Move
-NavTransferWorker.average=, average 
-Jobs.references.for.found.in.jobs=References for "{0}" found in Jobs:       
-Job.task.number=, Task #
-Jobs.waiting.for.job.thread.to.complete=Waiting for Job thread to complete
-Jobs.waiting.is.over.for.the.job.thread=Waiting is over for the Job thread
-Sleep.add.new.tool.configuration=Add new tool configuration
