--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -6,6 +6,11 @@
 #
 
 About.title=About
+BookmarksUI.deleteButton.text=Delete selected ...
+BookmarksUI.header.name=* Name
+BookmarksUI.header.path=Path
+BookmarksUI.header.tab=Tab
+BookmarksUI.this.title=Bookmarks Editor
 Browser.add.bookmark=Add Bookmark
 Browser.bookmark.location.not.found=Location not found\: 
 Browser.bookmark.name=bookmark name: 
@@ -675,8 +680,8 @@ Navigator.menu.AddBookmark.mnemonic=A
 Navigator.menu.AddBookmark.text=Add current location ...
 Navigator.menu.Bookmarks.mnemonic=B
 Navigator.menu.Bookmarks.text=Bookmarks
-Navigator.menu.BookmarksManage.mnemonic=M
-Navigator.menu.BookmarksManage.text=Delete bookmarks ...
+Navigator.menuItemBookmarksDelete.mnemonic=E
+Navigator.menu.BookmarksManage.text=Edit bookmarks ...
 Navigator.menu.Controls.mnemonic=C
 Navigator.menu.Controls.text=Controls ...
 Navigator.menu.Copy.mnemonic=C
