--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -652,6 +652,8 @@ Navigator.install.update.version=<html><body><p>ELS update available.</p><p>&nbs
 Navigator.install.use.option.y.to.install.update=Use option -Y to install update
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.job=Job "
+Navigator.label2.text=text
+Navigator.labelMatchDates.text=Match
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelCustom.text=Custom\:
 Navigator.labelFlavor.text=Flavor\:
@@ -1116,6 +1118,7 @@ Process.subscribed.publisher.library.not.found=Subscribed publisher library {0} 
 Process.subscriber.has.different.size=\  ! Subscriber {0} has different size {1}
 Process.subscriber.has=\  = Subscriber {0} has {1}
 Process.subscriber.missing=\  + Subscriber {0} missing {1}
+Process.subscriber.out.of.date=\  + Subscriber {0} out of date {1}
 Process.switching.groups.from.to=Switching groups from {0} to {1}
 Process.to=\ to 
 Process.total.directories=# Total directories: 
@@ -1531,3 +1534,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+MatchDateCell.checkBox.tooltip=Match file dates in this library
