--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -29,7 +29,6 @@ Browser.library.is.not.loaded=Library {0} is not loaded
 Browser.open.a.publisher=--Open a publisher library--
 Browser.open.a.subscriber=--Open a subscriber library--
 Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
-Browser.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
 Browser.skipping=Skipping: 
 Browser.system=System
 BrowserTable.column.modified=Modified
@@ -111,6 +110,9 @@ Cfg.marker.enabled=Enabled
 Cfg.see.the.els.wiki.on.github.for.documentation.at=See the ELS wiki on GitHub for documentation at:
 Cfg.show.all.items=, show all items
 ClientStty.forcing.request.of.collection.with.s=Forcing request of collection
+Comm.attempted.login=\ attempted login
+Comm.blacklisted.ip=Blacklisted IP 
+Comm.not.whitelisted.ip=Not whitelisted IP 
 DuplicateFinder.action=Action
 DuplicateFinder.analyzing.library=Analyzing library 
 DuplicateFinder.buttonRun.mnemonic=R
@@ -506,9 +508,10 @@ MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user reque
 MainFrame.job.running.are.you.sure=There is a Job running. Are you sure you want to quit?
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
-NavHelp.showCheckBox.text=Show at start-up
+MatchDateCell.checkBox.tooltip=Match file dates in this library
 NavHelp.error.opening.help.file=Error opening help file:\ 
 NavHelp.name=NavHelp
+NavHelp.showCheckBox.text=Show at start-up
 NavTransferHandler.action.cancelled=Action cancelled
 NavTransferHandler.are.you.sure.you.want.to={0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
 NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfer to currently selected location
@@ -653,7 +656,6 @@ Navigator.install.use.option.y.to.install.update=Use option -Y to install update
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.job=Job "
 Navigator.label2.text=text
-Navigator.labelMatchDates.text=Match
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelCustom.text=Custom\:
 Navigator.labelFlavor.text=Flavor\:
@@ -664,6 +666,7 @@ Navigator.labelKey.text=Key\:
 Navigator.labelLibrariesHelp.toolTipText=Libraries Help
 Navigator.labelListen.text=Listen\:
 Navigator.labelListenLan.text=Listen (LAN)\:
+Navigator.labelMatchDates.text=Match
 Navigator.labelOperationGettingStarted.text=Click the New button to define parameters for a library
 Navigator.labelPath.text=Path\:
 Navigator.labelRemote.text=Remote connection\:
@@ -682,7 +685,6 @@ Navigator.menu.AddBookmark.mnemonic=A
 Navigator.menu.AddBookmark.text=Add current location ...
 Navigator.menu.Bookmarks.mnemonic=B
 Navigator.menu.Bookmarks.text=Bookmarks
-Navigator.menuItemBookmarksDelete.mnemonic=E
 Navigator.menu.BookmarksManage.text=Edit bookmarks ...
 Navigator.menu.Controls.mnemonic=C
 Navigator.menu.Controls.text=Controls ...
@@ -810,6 +812,7 @@ Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemBlacklist.mnemonic=B
 Navigator.menuItemBlacklist.text=Blacklist ...
+Navigator.menuItemBookmarksDelete.mnemonic=E
 Navigator.menuItemChangelist.mnemonic=L
 Navigator.menuItemChangelist.text=Changelist ...
 Navigator.menuItemClose.mnemonic=C
@@ -853,6 +856,9 @@ Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemRefresh.mnemonic=F
 Navigator.menuItemReleaseNotes.mnemonic=R
 Navigator.menuItemReleaseNotes.text=Release Notes ...
+Navigator.menuItemShowNavigation.mnemonic=N
+Navigator.menuItemShowNavigation.text=Show Navigation
+Navigator.menuItemShowToolbar.mnemonic=T
 Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
@@ -1257,7 +1263,6 @@ Settings.generalPanel.tab.title=General
 Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialog
 Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
-Settings.showGettingStarted.text=Show Getting Started\:
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.macosLauncherLabel.text=Use ELS MacOS Launcher\:
@@ -1269,6 +1274,7 @@ Settings.show.Arrows.Label.text=Show up/down arrows\:
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
 Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
+Settings.showGettingStarted.text=Show Getting Started\:
 Settings.showMnemonicsLabel.text=Show mnemonics\:
 Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
@@ -1307,8 +1313,6 @@ Sleep.stop.running.sleep=Stop running Sleep?
 Sleep.title=Sleep Tool\t
 Stty.all.hints.saved=All Hints saved
 Stty.attempt.to.login.interactively.but.terminal.sessions.are.not.allowed=attempt to login interactively but terminal sessions are not allowed
-Stty.attempted.login=\ attempted login
-Stty.blacklisted.ip=blacklisted IP 
 Stty.cannot.get.site.from.s.s.specified.remote.subscriber.library=Cannot get site from -s | -S specified remote subscriber library
 Stty.client.authenticated.choice.terminal.automated.session=Stty client authenticated {0, choice, 0#terminal|1#automated} session: 
 Stty.client.heartbeat.already.disabled=Client heartbeat already disabled
@@ -1356,7 +1360,6 @@ Stty.ignoring.exception.listener.keep.going.enabled=Ignoring exception, --listen
 Stty.ignoring.quit.command.listener.keep.going.enabled=Ignoring quit command, --listener-keep-going enabled
 Stty.listener.interrupted.on.port.stop=listener interrupted on port {0}, stop=
 Stty.multiple.status.files.are.not.supported.in=Multiple status files are not supported in 
-Stty.not.whitelisted.ip=not whitelisted IP 
 Stty.opening.stty.connection.to=Opening stty connection to: 
 Stty.process.fault.ending.stty=process fault, ending stty
 Stty.processing.command.from=Processing command: {0}, from: 
@@ -1534,4 +1537,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-MatchDateCell.checkBox.tooltip=Match file dates in this library
