--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1352,6 +1352,8 @@ Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.askSendEmailLabel.text=Ask before sending emails\:
 Settings.askSendEmailCheckbox=For back-up processes In Navigator and the foreground ELS Logger\nask before sending Mismatches and What's New notifications
+Settings.labelRounded.text=Rounded edges\:
+Settings.labelRounded.toolTipText=Uncheck for standard buttons, comboboxes, etc.
 Settings.labelDefaultEmailServer.text=Default Email Server
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
