#83 Archiver Tool complete, see https://html-preview.github.io/?url=https://github.com/Corionis/ELS/blob/Version-4.1.0/build/changes.html

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -6,6 +6,18 @@
 #
 
 About.title=About
+ArchiverUI.cancelButton.text=Cancel
+ArchiverUI.checkBoxAppendDate.toolTipText=Append the date & time to the target archive\nfilename using the Date format Preference
+ArchiverUI.checkBoxAppendPubsub.toolTipText=Append the Publisher & Subscriber names to the target archive
+ArchiverUI.checkBoxDeleteFiles.toolTipText=Delete the Origin files when done
+ArchiverUI.comboBoxFormat.toolTipText=The type of archive
+ArchiverUI.labelFormat.text=Archive format\:
+ArchiverUI.labelAppendDate.text=Append date & time\:
+ArchiverUI.labelAppendPubSub.text=Append Publisher & Subscriber\:
+ArchiverUI.labelHelp.toolTipText=Archiver Help
+ArchiverUI.labelPanelTitle.text=Archiver Settings
+ArchiverUI.labelDeleteFiles.text=Delete files\:
+ArchiverUI.labelTarget.text=Target directory & base name\:
 BookmarksUI.deleteButton.text=Delete selected ...
 BookmarksUI.header.name=* Name
 BookmarksUI.header.path=Path
@@ -168,23 +180,25 @@ EmailUI.buttonNew.toolTipText=Add new email configuration
 EmailUI.buttonPassword.toolTipText=Toggle hiding
 EmailUI.buttonTest.text=Test ...
 EmailUI.buttonTest.toolTipText.disabled=Cannot send a test email, no Publisher or Publisher email address
-EmailUI.buttonTest.toolTipText=Send a test email to current Publisher
+EmailUI.buttonTest.toolTipText=Send a test email to
+EmailUI.cancelButton.text=Cancel
 EmailUI.cancelButton.toolTipText=Discard all changes
-EmailUI.comboBoxProfile.toolTipText=Supported email providers\n
+EmailUI.comboBox.Profile.toolTipText=Email provider
 EmailUI.els.authentication.end=You may close this browser tab.
 EmailUI.els.authentication.failed=Email authentication failed
 EmailUI.els.authentication.success=ELS Navigator Authorization Successful
 EmailUI.email.send.error=Email send error: 
 EmailUI.help=Email Help
-EmailUI.label1.text=SMTP Server Settings
 EmailUI.labelAuthMethod.text=Authentication method\:
 EmailUI.labelHelp.toolTipText=Email Server Help
+EmailUI.labelPanelTitle.text=SMTP Server Settings
 EmailUI.labelPassword.text=Password\:
 EmailUI.labelPort.text=Port\:
 EmailUI.labelProfile.text=Profile\:
 EmailUI.labelSecurity.text=Connection security\:
 EmailUI.labelServerName.text=Server name\:
 EmailUI.labelUsername.text=User name\:
+EmailUI.saveButton.text=Save
 EmailUI.saveButton.toolTipText=Save all changes
 EmailUI.title=Email Servers
 EmptyDirectoryFinder.buttonAll.mnemonic=A
@@ -407,7 +421,7 @@ JobsUI.subscriber.remote.custom=Remote subscriber (Custom)
 JobsUI.subscriber.remote.listen=Remote subscriber (Listen, LAN)
 JobsUI.subscriber.remote.server=Remote subscriber (Host, Internet)
 JobsUI.task.has.no.origins=Task has no origins: 
-JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
+JobsUI.task.has.no.publisher.and.or.subscriber=Task has no Publisher, Subscriber or Origins\: 
 JobsUI.title=Jobs
 JobsUI.tool.not.found=Tool not found: 
 JunkRemover.button.AddRow.mnemonic=A
@@ -471,7 +485,7 @@ Libraries.select.new.location=Select path of new Location for
 Libraries.select.new.multiple.already.defined=<html><body>Path {0}<p>is already defined for library {1}</body></html>
 Libraries.select.new.multiple.source.path=Select Source base path
 Libraries.select.new.multiple.source.to.libraries=Add new Source to libraries:
-Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select Browser base path of new Source for: <b>{0}</b></html></body>
+Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source for: <b>{0}</b></html></body>
 Libraries.select.new.source.path=Select new Source path
 Libraries.select.new.source=Select path of new Source for
 Libraries.select.temp.location.path=Select Temporary Files Location
@@ -481,7 +495,7 @@ Libraries.targets=Targets
 Libraries.that.library.already.exists=That library already exists
 Libraries.that.location.is.already.defined=That Location is already defined
 Libraries.that.source.is.already.defined=That Source is already defined
-Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing Key.</body></html>
+Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing Key.<br/><br/></body></html>
 Libraries.toggle.all=\ Toggle all
 Libraries.undo=Undo
 Libraries.use.browser.selection=Select from Browser
@@ -671,7 +685,7 @@ Navigator.buttonHintServer.text=\ Hint Server
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonHintTracking.text=\ Hint Tracker
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
-Navigator.buttonLibrariesAddIgnore.text=Add
+Navigator.buttonLibrariesAddIgnore.text=Add ...
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
 Navigator.buttonLibrariesRemoveIgnore.mnemonic=M
 Navigator.buttonLibrariesRemoveIgnore.text=Remove ...
@@ -696,11 +710,11 @@ Navigator.cancelButton.mnemonic_2=U
 Navigator.cannot.find.executable=Cannot find ELS executable:\ 
 Navigator.changes.help.title=Build Changelist
 Navigator.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
-Navigator.checkBoxMismatches.toolTipText=Receive separate Mismatches notifications
+Navigator.checkBoxMismatches.toolTipText=Receive separate technocal Mismatches notifications
 Navigator.checkBoxSkipOffline.toolTipText=Skip sending notification if error 'Remote subscriber failed to connect'
 Navigator.checkBoxTempDated.toolTipText=Add date stamp to temporary filenames
 Navigator.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
-Navigator.checkBoxWhatsNew.toolTipText=Receive separate What's New notifications
+Navigator.checkBoxWhatsNew.toolTipText=Receive separate user What's New notifications
 Navigator.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
 Navigator.comboBoxFormat.toolTipText=Preferred email format
 Navigator.controls.help.title=Navigator Controls
@@ -888,6 +902,8 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemArchiver.mnemonic=A
+Navigator.menuItemArchiver.text=Archiver ...
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemBlacklist.mnemonic=B
@@ -909,7 +925,7 @@ Navigator.menuItemCloseSubscriber.text=Subscriber ...
 Navigator.menuItemDiscussions.mnemonic=S
 Navigator.menuItemDiscussions.text=Discussions
 Navigator.menuItemEmail.mnemonic=E
-Navigator.menuItemEmptyFinder.mnemonic_2=F
+Navigator.menuItemEmptyFinder.mnemonic=E
 Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
 Navigator.menuItemExternalTools.displayedMnemonicIndex=9
 Navigator.menuItemExternalTools.mnemonic=T
@@ -1172,6 +1188,7 @@ OperationsUI.uncheck.to.exclude.selections=Uncheck to exclude selections
 Preferences.preferences.file=preferences file
 Process.a.p.publisher.library.or.p.collection.file.is.required.for.local.publish=A -p publisher library or -P collection file is required for Local Publish
 Process.analyzing.library.for.duplicates=Analyzing library ''{0}'' for duplicates
+Process.back.up.completed.successfully.send.emails=Back-up completed successfully.\n\nSend Mismatches/What's New notification emails?
 Process.cannot.send.completion.email=Cannot send completion email(s), no -M option or Default Email Server
 Process.copies=# Copies           : 
 Process.different.sizes=# Different sizes  : 
@@ -1239,7 +1256,7 @@ RenameUI.type.combobox.2.numbering=Numbering
 RenameUI.type.combobox.3.remove=Remove
 RenameUI.type.combobox.4.replace=Replace
 RenameUI.type.combobox.select.type=Select type:
-Renamer..has.no.repository.defined={0} has no repository defined
+Renamer.has.no.repository.defined={0} has no repository defined
 Renamer.button.Copy.mnemonic=C
 Renamer.button.Delete.mnemonic=D
 Renamer.button.New.mnemonic=N
@@ -1329,6 +1346,10 @@ Repository.writing.text.file=Writing text file
 Settings.accentColorLabel.text=Accent color\:
 Settings.appearance.tab.title=Appearance
 Settings.appearancePanel.tab.mnemonic=A
+Settings.askSendEmailCheckbox=For back-up processes In Navigator and the foreground ELS Logger\nask before sending Mismatches and What's New notifications
+Settings.askSendEmailLabel.text=Ask before sending emails\:
+Settings.behaviorPanel.tab.mnemonic=B
+Settings.behaviorPanel.tab.title=Behavior
 Settings.browserPanel.tab.mnemonic_2=R
 Settings.browserPanel.tab.title=Browser
 Settings.button.ChooseColor.text=Choose
@@ -1350,17 +1371,13 @@ Settings.generalPanel.tab.title=General
 Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialogs
 Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
-Settings.askSendEmailLabel.text=Ask before sending emails\:
-Settings.askSendEmailCheckbox=For back-up processes In Navigator and the foreground ELS Logger\nask before sending Mismatches and What's New notifications
-Settings.labelRounded.text=Rounded edges\:
-Settings.labelRounded.toolTipText=Uncheck for standard buttons, comboboxes, etc.
 Settings.labelDefaultEmailServer.text=Default Email Server
+Settings.labelRounded.text=Show rounded edges\:
+Settings.labelRounded.toolTipText=Uncheck for standard buttons, comboboxes, etc.
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.macosLauncherLabel.text=Use ELS MacOS Launcher\:
 Settings.okButton.mnemonic=S
-Settings.behaviorPanel.tab.mnemonic=B
-Settings.behaviorPanel.tab.title=Behavior
 Settings.preserveFileTimestampsCheckBox.toolTipText=Preserver file timestamps during copy/move actions
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
 Settings.scaleCheckBox.toolTipText=Uncheck for binary (1024 K) scale size values
@@ -1371,10 +1388,10 @@ Settings.showArrowsCheckBox.toolTipText=Show the up and down arrows on scrollabl
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
 Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
-Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.showGettingStarted.text=Show Getting Started\:
 Settings.showMnemonicsCheckBox.toolTipText=Show the underscore of tab and menu selection letter
 Settings.showMnemonicsLabel.text=Show mnemonics\:
+Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
@@ -1387,8 +1404,8 @@ Settings.textField.HintButtonColor.toolTipText=RGB color in hex, i.e. FF009F. Cl
 Settings.this.title=Navigator Preferences
 Settings.tooltipLargeTableCheckBox.toolTipText=Show table tooltips on everything > 1000 rows
 Settings.tooltipLargeTableLabel.text=Tooltips on large tables\:
-Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if none specified
 Settings.useLastPubSubLabel.text=Use last publisher/subscriber\:
+Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if none specified
 Sftp.client.sftp.timeout.is=client sftp timeout is 
 Sftp.from=\n from 
 Sftp.idle.timeout.is=sftp idle timeout is 
@@ -1451,8 +1468,8 @@ Stty.hint.server.exception=Hint Server exception
 Stty.hint.server.listener.handshake=Hint Server listener handshake
 Stty.hint.server.session.done.status=Hint Server session done, status = 
 Stty.hint.status.directory.is.not.a.directory=Hint Status directory is not a directory: 
-Stty.hint.status.tracker.server.repo.contains.no.library.for.status.datastore=Hint Status Tracker/Server repo contains no library for status datastore
-Stty.hint.status.tracker.server.repo.first.library.contains.no.sources=Hint Status Tracker/Server repo first library contains no sources: 
+Stty.hint.status.tracker.server.pubRepo.contains.no.library.for.status.datastore=Hint Status Tracker/Server pubRepo contains no library for status datastore
+Stty.hint.status.tracker.server.pubRepo.first.library.contains.no.sources=Hint Status Tracker/Server pubRepo first library contains no sources: 
 Stty.hint.updated=Hint updated: 
 Stty.ignoring.exception.listener.keep.going.enabled=Ignoring exception, --listener-keep-going enabled
 Stty.ignoring.quit.command.listener.keep.going.enabled=Ignoring quit command, --listener-keep-going enabled
@@ -1633,5 +1650,42 @@ Z.warning=Warning:
 Z.would.delete=Would delete: 
 Z.would.rename=Would rename: 
 Z.yes=Yes
+ArchiverUI.saveButton.text=Save
+ArchiverUI.textFieldTarget.toolTipText=Archiver output file. Extension added based on Format.
+ArchiverUI.title=Archiver
 jobs.displayName=Job
-Process.back.up.completed.successfully.send.emails=Back-up completed successfully.\n\nSend Mismatches/What's New notification emails?
+ArchiverUI.button.cancel.tooltip=Discard all changes
+ArchiverUI.buttonCopy.mnemonic=C
+ArchiverUI.buttonCopy.text=Copy
+ArchiverUI.buttonCopy.toolTipText=Copy an existing configuration
+ArchiverUI.buttonDelete.mnemonic=D
+ArchiverUI.buttonDelete.text=Delete ...
+ArchiverUI.buttonDelete.toolTipText=Delete selected configuration
+ArchiverUI.buttonNew.mnemonic=N
+ArchiverUI.buttonNew.text=New
+ArchiverUI.buttonNew.toolTipText=Add new Archiver configuration
+ArchiverUI.button.save.toolTipText=Save all changes
+ArchiverUI.buttonRun.mnemonic=R
+ArchiverUI.buttonRun.text=Run ...
+ArchiverUI.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
+ArchiverUI.selectTarget.description=Archive directory and file
+ArchiverUI.selectTarget.title=Select target location and file
+ArchiverUI.buttonSelectTarget.toolTipText=Select target location or base filename
+Archiver.displayName=Archiver
+Archiver.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
+Archiver.has.no.repository.defined={0} has no repository defined
+Archiver.stop.running=Stop currently running Archiver?
+Archiver.config.cancelled=Archiver {0} cancelled
+Z.this.tool.is.for.the.local.publisher.only=This tool is for the local Publisher only
+Archiver.run.on.N.locations=Run "{0}" on {1} {2} Browser selection(s)?
+Archiver.example=Example:
+Archiver.missing.target=Archiver missing Append options and/or Target filename
+Archiver.nothing.selected.in.browser=Nothing selected in Browser
+Archiver.no.files.found.to.compress=Archiver: No files found to compress
+Archiver.unknown.archiver.format=Unknown archiver format: 
+Archiver.file.disappeared=Archiver: File disappeared before deletion: 
+Z.empty=<empty>
+Archiver.deleted=, deleted 
+Archiver.compressed=\ compressed 
+Archiver.compressed.file=Compressed: 
+Archiver.files.successfully.to=\ files successfully to: 
